// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data should match a snapshot with data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="el-flex-auto"
      >
        <mock-styled.aside
          classname=""
        >
          <mock-styled.span
            classname="el-mb5 el-icon-size-large"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 80 80"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M66.74 34.076 39.997 24.65l-26.74 9.425 26.74 9.567 26.741-9.567Z"
                fill="#9faebc"
              />
              <path
                d="M66.74 34.076 39.999 24.65v18.992l26.74-9.567Z"
                fill="#607890"
              />
              <path
                d="M50.578 7.466H28.611c-2.131 0-3.865 1.773-3.865 3.952V58.74c0 2.179 1.734 3.952 3.865 3.952h21.967c2.132 0 3.866-1.773 3.866-3.952V11.418c0-2.179-1.734-3.952-3.866-3.952Z"
                fill="#d8dee4"
              />
              <path
                d="M50.566 9.754H47.3a.563.563 0 0 0-.558.57c0 .754-.604 1.372-1.342 1.372H33.764c-.739 0-1.343-.618-1.343-1.373 0-.314-.25-.57-.558-.57H28.6c-.9 0-1.628.746-1.628 1.665v37.337h25.223V11.418c0-.919-.73-1.664-1.629-1.664Z"
                fill="#d8dee4"
              />
              <path
                d="m28.935 28.526 10.673-10.488L50.28 28.526v14.483H28.935V28.526Z"
                fill="#506478"
              />
              <path
                d="m28.935 28.526 10.673-10.488L50.28 28.526v8.24l-21.345-8.24Z"
                fill="#d8dee4"
              />
              <path
                d="M50.28 43.009h-6.247l-8.85-20.622 4.425-4.349L50.28 28.526v14.483Z"
                fill="#9faebc"
              />
              <path
                d="M50.28 28.526v8.24l-10.672-4.068-4.425-10.311 4.425-4.349L50.28 28.526Z"
                fill="#798da1"
              />
              <path
                d="m39.998 43.67-26.74-9.595v34.501l26.74 8.624V43.67Z"
                fill="#607890"
              />
              <path
                d="M66.74 68.576v-34.5l-26.741 9.593V77.2l26.74-8.624Z"
                fill="#506478"
              />
              <path
                d="M13.257 34.076 4 45.214l27.244 10.067 8.754-11.638-26.74-9.567Z"
                fill="#d8dee4"
              />
              <path
                d="M66.74 34.075 76 45.214 48.756 55.28l-8.757-11.638 26.74-9.568Z"
                fill="#798da1"
              />
              <path
                d="M41 9a7 7 0 0 1 7-7h11a7 7 0 1 1 0 14H48a7 7 0 0 1-7-7Z"
                fill="#9faebc"
              />
              <path
                d="M72.084 17.688c-.461-1.78-2.297-2.803-4-2.088-.439-1.694-2.15-2.77-3.885-2.126V9.106c-.001-4.138-5.998-4.145-6 0v16.112l-2.879-3.006a2.913 2.913 0 0 0-4.242 0c-1.169 1.218-1.173 3.206 0 4.43l7.93 8.28c1.89 1.971 4.45 3.078 7.12 3.078C71.692 38 76.2 33.293 76.2 27.485v-6.894c0-2.201-2.13-3.736-4.116-2.903Z"
                fill="#7e9bfa"
              />
            </svg>
          </mock-styled.span>
          <mock-styled.p
            classname=""
          >
            Support
          </mock-styled.p>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            Please see our
             
            <a
              href="https://www.youtube.com/watch?v=N-4TeWsM7EU&feature=youtu.be"
              rel="noopener noreferrer"
              target="_blank"
            >
              usage instructions
            </a>
             
            for further information on how to use these details to connect a number of popular BI applications.
          </mock-styled.p>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            Please see below for more resources.
          </mock-styled.p>
          <mock-styled.button
            classname="el-mb5 el-intent-neutral"
          >
            <mock-styled.div />
            View Docs
          </mock-styled.button>
          <div>
            <mock-styled.button
              classname="el-mb5 el-intent-neutral"
            >
              <mock-styled.div />
              Video
            </mock-styled.button>
          </div>
          <mock-styled.button
            classname="el-mb5 el-intent-neutral"
          >
            <mock-styled.div />
            Help
          </mock-styled.button>
        </mock-styled.aside>
        <mock-styled.section
          classname=""
        >
          <mock-styled.h1
            classname=""
          >
            Sharing Data
          </mock-styled.h1>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            Our data warehouse solution can provide access to your data in a number of different formats. To get immediate access to your data in a particular format, click ‘Create Share’. The data will be published into your data warehouse and connectivity information will then be presented to you.
          </mock-styled.p>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            Please note that creating a data share is a long running process and can take 30 seconds or more to complete.
          </mock-styled.p>
          <mock-styled.h2
            classname=""
          >
            Available Data
          </mock-styled.h2>
          <mock-styled.div
            classname="el-mb11"
            data-has-call-to-action="false"
            data-has-expandable-action="true"
            data-num-columns-excl-action-col="3"
          >
            <mock-styled.div>
              <mock-styled.div>
                Name
              </mock-styled.div>
              <mock-styled.div>
                Provider
              </mock-styled.div>
              <mock-styled.div>
                Description
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.21 7.21 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.47 7.47 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.48 6.48 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.209 7.209 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27l-2.06-1.85ZM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                >
                  <mock-styled.div
                    data-narrow-label="Name"
                  >
                    RPS Database
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                >
                  <mock-styled.div
                    data-narrow-label="Provider"
                  >
                    Reapit Ltd
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                >
                  <mock-styled.div
                    data-narrow-label="Description"
                  >
                    Access to legacy data
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.span
                    classname="el-intent-default el-icon-new"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0ZM12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4ZM19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div
                      classname="el-button-group-align-center"
                    >
                      <mock-styled.button
                        classname="el-intent-primary"
                        disabled="false"
                      >
                        <mock-styled.div />
                        Create Share
                      </mock-styled.button>
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                >
                  <mock-styled.div
                    data-narrow-label="Name"
                  >
                    RPS Views
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                >
                  <mock-styled.div
                    data-narrow-label="Provider"
                  >
                    Reapit Ltd
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                >
                  <mock-styled.div
                    data-narrow-label="Description"
                  >
                    Access to legacy views
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.span
                    classname="el-intent-default el-icon-new"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0ZM12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4ZM19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div
                      classname="el-button-group-align-center"
                    >
                      <mock-styled.button
                        classname="el-intent-primary"
                        disabled="false"
                      >
                        <mock-styled.div />
                        Create Share
                      </mock-styled.button>
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.h2
            classname=""
          >
            Data Shares
          </mock-styled.h2>
          <mock-styled.div
            classname="el-mb11"
            data-has-call-to-action="false"
            data-has-expandable-action="true"
            data-num-columns-excl-action-col="5"
          >
            <mock-styled.div>
              <mock-styled.div>
                Data Set Name
              </mock-styled.div>
              <mock-styled.div>
                Database
              </mock-styled.div>
              <mock-styled.div>
                Schema
              </mock-styled.div>
              <mock-styled.div>
                Warehouse
              </mock-styled.div>
              <mock-styled.div>
                Region
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.21 7.21 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.47 7.47 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.48 6.48 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.209 7.209 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27l-2.06-1.85ZM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                >
                  <mock-styled.div
                    data-narrow-label="Data Set Name"
                  >
                    RPS Database
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                >
                  <mock-styled.div
                    data-narrow-label="Database"
                  >
                    reapit
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                >
                  <mock-styled.div
                    data-narrow-label="Schema"
                  >
                    customers_rps_DEV
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                >
                  <mock-styled.div
                    data-narrow-label="Warehouse"
                  >
                    STANDARD_WH
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                >
                  <mock-styled.div
                    data-narrow-label="Region"
                  >
                    eu-west-1
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.span
                    classname="el-intent-default el-icon-new"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0ZM12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4ZM19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div
                      classname="el-button-group-align-center"
                    >
                      <mock-styled.button
                        classname="el-intent-neutral"
                      >
                        <mock-styled.div />
                        Copy URL
                      </mock-styled.button>
                      <mock-styled.button
                        classname="el-intent-neutral"
                      >
                        <mock-styled.div />
                        Copy DSN
                      </mock-styled.button>
                      <mock-styled.button
                        classname="el-intent-primary"
                        disabled="false"
                      >
                        <mock-styled.div />
                        Refresh Share
                      </mock-styled.button>
                      <mock-styled.button
                        classname="el-intent-danger"
                        disabled="false"
                      >
                        <mock-styled.div />
                        Delete Share
                      </mock-styled.button>
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="el-flex-auto"
    >
      <mock-styled.aside
        classname=""
      >
        <mock-styled.span
          classname="el-mb5 el-icon-size-large"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 80 80"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M66.74 34.076 39.997 24.65l-26.74 9.425 26.74 9.567 26.741-9.567Z"
              fill="#9faebc"
            />
            <path
              d="M66.74 34.076 39.999 24.65v18.992l26.74-9.567Z"
              fill="#607890"
            />
            <path
              d="M50.578 7.466H28.611c-2.131 0-3.865 1.773-3.865 3.952V58.74c0 2.179 1.734 3.952 3.865 3.952h21.967c2.132 0 3.866-1.773 3.866-3.952V11.418c0-2.179-1.734-3.952-3.866-3.952Z"
              fill="#d8dee4"
            />
            <path
              d="M50.566 9.754H47.3a.563.563 0 0 0-.558.57c0 .754-.604 1.372-1.342 1.372H33.764c-.739 0-1.343-.618-1.343-1.373 0-.314-.25-.57-.558-.57H28.6c-.9 0-1.628.746-1.628 1.665v37.337h25.223V11.418c0-.919-.73-1.664-1.629-1.664Z"
              fill="#d8dee4"
            />
            <path
              d="m28.935 28.526 10.673-10.488L50.28 28.526v14.483H28.935V28.526Z"
              fill="#506478"
            />
            <path
              d="m28.935 28.526 10.673-10.488L50.28 28.526v8.24l-21.345-8.24Z"
              fill="#d8dee4"
            />
            <path
              d="M50.28 43.009h-6.247l-8.85-20.622 4.425-4.349L50.28 28.526v14.483Z"
              fill="#9faebc"
            />
            <path
              d="M50.28 28.526v8.24l-10.672-4.068-4.425-10.311 4.425-4.349L50.28 28.526Z"
              fill="#798da1"
            />
            <path
              d="m39.998 43.67-26.74-9.595v34.501l26.74 8.624V43.67Z"
              fill="#607890"
            />
            <path
              d="M66.74 68.576v-34.5l-26.741 9.593V77.2l26.74-8.624Z"
              fill="#506478"
            />
            <path
              d="M13.257 34.076 4 45.214l27.244 10.067 8.754-11.638-26.74-9.567Z"
              fill="#d8dee4"
            />
            <path
              d="M66.74 34.075 76 45.214 48.756 55.28l-8.757-11.638 26.74-9.568Z"
              fill="#798da1"
            />
            <path
              d="M41 9a7 7 0 0 1 7-7h11a7 7 0 1 1 0 14H48a7 7 0 0 1-7-7Z"
              fill="#9faebc"
            />
            <path
              d="M72.084 17.688c-.461-1.78-2.297-2.803-4-2.088-.439-1.694-2.15-2.77-3.885-2.126V9.106c-.001-4.138-5.998-4.145-6 0v16.112l-2.879-3.006a2.913 2.913 0 0 0-4.242 0c-1.169 1.218-1.173 3.206 0 4.43l7.93 8.28c1.89 1.971 4.45 3.078 7.12 3.078C71.692 38 76.2 33.293 76.2 27.485v-6.894c0-2.201-2.13-3.736-4.116-2.903Z"
              fill="#7e9bfa"
            />
          </svg>
        </mock-styled.span>
        <mock-styled.p
          classname=""
        >
          Support
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          Please see our
           
          <a
            href="https://www.youtube.com/watch?v=N-4TeWsM7EU&feature=youtu.be"
            rel="noopener noreferrer"
            target="_blank"
          >
            usage instructions
          </a>
           
          for further information on how to use these details to connect a number of popular BI applications.
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          Please see below for more resources.
        </mock-styled.p>
        <mock-styled.button
          classname="el-mb5 el-intent-neutral"
        >
          <mock-styled.div />
          View Docs
        </mock-styled.button>
        <div>
          <mock-styled.button
            classname="el-mb5 el-intent-neutral"
          >
            <mock-styled.div />
            Video
          </mock-styled.button>
        </div>
        <mock-styled.button
          classname="el-mb5 el-intent-neutral"
        >
          <mock-styled.div />
          Help
        </mock-styled.button>
      </mock-styled.aside>
      <mock-styled.section
        classname=""
      >
        <mock-styled.h1
          classname=""
        >
          Sharing Data
        </mock-styled.h1>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          Our data warehouse solution can provide access to your data in a number of different formats. To get immediate access to your data in a particular format, click ‘Create Share’. The data will be published into your data warehouse and connectivity information will then be presented to you.
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          Please note that creating a data share is a long running process and can take 30 seconds or more to complete.
        </mock-styled.p>
        <mock-styled.h2
          classname=""
        >
          Available Data
        </mock-styled.h2>
        <mock-styled.div
          classname="el-mb11"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="3"
        >
          <mock-styled.div>
            <mock-styled.div>
              Name
            </mock-styled.div>
            <mock-styled.div>
              Provider
            </mock-styled.div>
            <mock-styled.div>
              Description
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.span
                classname="el-intent-default el-icon-new"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.21 7.21 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.47 7.47 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.48 6.48 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.209 7.209 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27l-2.06-1.85ZM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
              >
                <mock-styled.div
                  data-narrow-label="Name"
                >
                  RPS Database
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
              >
                <mock-styled.div
                  data-narrow-label="Provider"
                >
                  Reapit Ltd
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
              >
                <mock-styled.div
                  data-narrow-label="Description"
                >
                  Access to legacy data
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0ZM12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4ZM19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div
                    classname="el-button-group-align-center"
                  >
                    <mock-styled.button
                      classname="el-intent-primary"
                      disabled="false"
                    >
                      <mock-styled.div />
                      Create Share
                    </mock-styled.button>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
              >
                <mock-styled.div
                  data-narrow-label="Name"
                >
                  RPS Views
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
              >
                <mock-styled.div
                  data-narrow-label="Provider"
                >
                  Reapit Ltd
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
              >
                <mock-styled.div
                  data-narrow-label="Description"
                >
                  Access to legacy views
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0ZM12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4ZM19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div
                    classname="el-button-group-align-center"
                  >
                    <mock-styled.button
                      classname="el-intent-primary"
                      disabled="false"
                    >
                      <mock-styled.div />
                      Create Share
                    </mock-styled.button>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.h2
          classname=""
        >
          Data Shares
        </mock-styled.h2>
        <mock-styled.div
          classname="el-mb11"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="5"
        >
          <mock-styled.div>
            <mock-styled.div>
              Data Set Name
            </mock-styled.div>
            <mock-styled.div>
              Database
            </mock-styled.div>
            <mock-styled.div>
              Schema
            </mock-styled.div>
            <mock-styled.div>
              Warehouse
            </mock-styled.div>
            <mock-styled.div>
              Region
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.span
                classname="el-intent-default el-icon-new"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.21 7.21 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.47 7.47 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.48 6.48 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.209 7.209 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27l-2.06-1.85ZM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
              >
                <mock-styled.div
                  data-narrow-label="Data Set Name"
                >
                  RPS Database
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
              >
                <mock-styled.div
                  data-narrow-label="Database"
                >
                  reapit
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
              >
                <mock-styled.div
                  data-narrow-label="Schema"
                >
                  customers_rps_DEV
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
              >
                <mock-styled.div
                  data-narrow-label="Warehouse"
                >
                  STANDARD_WH
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
              >
                <mock-styled.div
                  data-narrow-label="Region"
                >
                  eu-west-1
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0ZM12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4ZM19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div
                    classname="el-button-group-align-center"
                  >
                    <mock-styled.button
                      classname="el-intent-neutral"
                    >
                      <mock-styled.div />
                      Copy URL
                    </mock-styled.button>
                    <mock-styled.button
                      classname="el-intent-neutral"
                    >
                      <mock-styled.div />
                      Copy DSN
                    </mock-styled.button>
                    <mock-styled.button
                      classname="el-intent-primary"
                      disabled="false"
                    >
                      <mock-styled.div />
                      Refresh Share
                    </mock-styled.button>
                    <mock-styled.button
                      classname="el-intent-danger"
                      disabled="false"
                    >
                      <mock-styled.div />
                      Delete Share
                    </mock-styled.button>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Data should match a snapshot with no data and loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="el-flex-auto"
      >
        <mock-styled.aside
          classname=""
        >
          <mock-styled.span
            classname="el-mb5 el-icon-size-large"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 80 80"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M66.74 34.076 39.997 24.65l-26.74 9.425 26.74 9.567 26.741-9.567Z"
                fill="#9faebc"
              />
              <path
                d="M66.74 34.076 39.999 24.65v18.992l26.74-9.567Z"
                fill="#607890"
              />
              <path
                d="M50.578 7.466H28.611c-2.131 0-3.865 1.773-3.865 3.952V58.74c0 2.179 1.734 3.952 3.865 3.952h21.967c2.132 0 3.866-1.773 3.866-3.952V11.418c0-2.179-1.734-3.952-3.866-3.952Z"
                fill="#d8dee4"
              />
              <path
                d="M50.566 9.754H47.3a.563.563 0 0 0-.558.57c0 .754-.604 1.372-1.342 1.372H33.764c-.739 0-1.343-.618-1.343-1.373 0-.314-.25-.57-.558-.57H28.6c-.9 0-1.628.746-1.628 1.665v37.337h25.223V11.418c0-.919-.73-1.664-1.629-1.664Z"
                fill="#d8dee4"
              />
              <path
                d="m28.935 28.526 10.673-10.488L50.28 28.526v14.483H28.935V28.526Z"
                fill="#506478"
              />
              <path
                d="m28.935 28.526 10.673-10.488L50.28 28.526v8.24l-21.345-8.24Z"
                fill="#d8dee4"
              />
              <path
                d="M50.28 43.009h-6.247l-8.85-20.622 4.425-4.349L50.28 28.526v14.483Z"
                fill="#9faebc"
              />
              <path
                d="M50.28 28.526v8.24l-10.672-4.068-4.425-10.311 4.425-4.349L50.28 28.526Z"
                fill="#798da1"
              />
              <path
                d="m39.998 43.67-26.74-9.595v34.501l26.74 8.624V43.67Z"
                fill="#607890"
              />
              <path
                d="M66.74 68.576v-34.5l-26.741 9.593V77.2l26.74-8.624Z"
                fill="#506478"
              />
              <path
                d="M13.257 34.076 4 45.214l27.244 10.067 8.754-11.638-26.74-9.567Z"
                fill="#d8dee4"
              />
              <path
                d="M66.74 34.075 76 45.214 48.756 55.28l-8.757-11.638 26.74-9.568Z"
                fill="#798da1"
              />
              <path
                d="M41 9a7 7 0 0 1 7-7h11a7 7 0 1 1 0 14H48a7 7 0 0 1-7-7Z"
                fill="#9faebc"
              />
              <path
                d="M72.084 17.688c-.461-1.78-2.297-2.803-4-2.088-.439-1.694-2.15-2.77-3.885-2.126V9.106c-.001-4.138-5.998-4.145-6 0v16.112l-2.879-3.006a2.913 2.913 0 0 0-4.242 0c-1.169 1.218-1.173 3.206 0 4.43l7.93 8.28c1.89 1.971 4.45 3.078 7.12 3.078C71.692 38 76.2 33.293 76.2 27.485v-6.894c0-2.201-2.13-3.736-4.116-2.903Z"
                fill="#7e9bfa"
              />
            </svg>
          </mock-styled.span>
          <mock-styled.p
            classname=""
          >
            Support
          </mock-styled.p>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            Please see our
             
            <a
              href="https://www.youtube.com/watch?v=N-4TeWsM7EU&feature=youtu.be"
              rel="noopener noreferrer"
              target="_blank"
            >
              usage instructions
            </a>
             
            for further information on how to use these details to connect a number of popular BI applications.
          </mock-styled.p>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            Please see below for more resources.
          </mock-styled.p>
          <mock-styled.button
            classname="el-mb5 el-intent-neutral"
          >
            <mock-styled.div />
            View Docs
          </mock-styled.button>
          <div>
            <mock-styled.button
              classname="el-mb5 el-intent-neutral"
            >
              <mock-styled.div />
              Video
            </mock-styled.button>
          </div>
          <mock-styled.button
            classname="el-mb5 el-intent-neutral"
          >
            <mock-styled.div />
            Help
          </mock-styled.button>
        </mock-styled.aside>
        <mock-styled.section
          classname=""
        >
          <mock-styled.h1
            classname=""
          >
            Sharing Data
          </mock-styled.h1>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            Our data warehouse solution can provide access to your data in a number of different formats. To get immediate access to your data in a particular format, click ‘Create Share’. The data will be published into your data warehouse and connectivity information will then be presented to you.
          </mock-styled.p>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            Please note that creating a data share is a long running process and can take 30 seconds or more to complete.
          </mock-styled.p>
          <mock-styled.h2
            classname=""
          >
            Available Data
          </mock-styled.h2>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="el-mb11"
            >
              <mock-styled.div />
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.h2
            classname=""
          >
            Data Shares
          </mock-styled.h2>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div />
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="el-flex-auto"
    >
      <mock-styled.aside
        classname=""
      >
        <mock-styled.span
          classname="el-mb5 el-icon-size-large"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 80 80"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M66.74 34.076 39.997 24.65l-26.74 9.425 26.74 9.567 26.741-9.567Z"
              fill="#9faebc"
            />
            <path
              d="M66.74 34.076 39.999 24.65v18.992l26.74-9.567Z"
              fill="#607890"
            />
            <path
              d="M50.578 7.466H28.611c-2.131 0-3.865 1.773-3.865 3.952V58.74c0 2.179 1.734 3.952 3.865 3.952h21.967c2.132 0 3.866-1.773 3.866-3.952V11.418c0-2.179-1.734-3.952-3.866-3.952Z"
              fill="#d8dee4"
            />
            <path
              d="M50.566 9.754H47.3a.563.563 0 0 0-.558.57c0 .754-.604 1.372-1.342 1.372H33.764c-.739 0-1.343-.618-1.343-1.373 0-.314-.25-.57-.558-.57H28.6c-.9 0-1.628.746-1.628 1.665v37.337h25.223V11.418c0-.919-.73-1.664-1.629-1.664Z"
              fill="#d8dee4"
            />
            <path
              d="m28.935 28.526 10.673-10.488L50.28 28.526v14.483H28.935V28.526Z"
              fill="#506478"
            />
            <path
              d="m28.935 28.526 10.673-10.488L50.28 28.526v8.24l-21.345-8.24Z"
              fill="#d8dee4"
            />
            <path
              d="M50.28 43.009h-6.247l-8.85-20.622 4.425-4.349L50.28 28.526v14.483Z"
              fill="#9faebc"
            />
            <path
              d="M50.28 28.526v8.24l-10.672-4.068-4.425-10.311 4.425-4.349L50.28 28.526Z"
              fill="#798da1"
            />
            <path
              d="m39.998 43.67-26.74-9.595v34.501l26.74 8.624V43.67Z"
              fill="#607890"
            />
            <path
              d="M66.74 68.576v-34.5l-26.741 9.593V77.2l26.74-8.624Z"
              fill="#506478"
            />
            <path
              d="M13.257 34.076 4 45.214l27.244 10.067 8.754-11.638-26.74-9.567Z"
              fill="#d8dee4"
            />
            <path
              d="M66.74 34.075 76 45.214 48.756 55.28l-8.757-11.638 26.74-9.568Z"
              fill="#798da1"
            />
            <path
              d="M41 9a7 7 0 0 1 7-7h11a7 7 0 1 1 0 14H48a7 7 0 0 1-7-7Z"
              fill="#9faebc"
            />
            <path
              d="M72.084 17.688c-.461-1.78-2.297-2.803-4-2.088-.439-1.694-2.15-2.77-3.885-2.126V9.106c-.001-4.138-5.998-4.145-6 0v16.112l-2.879-3.006a2.913 2.913 0 0 0-4.242 0c-1.169 1.218-1.173 3.206 0 4.43l7.93 8.28c1.89 1.971 4.45 3.078 7.12 3.078C71.692 38 76.2 33.293 76.2 27.485v-6.894c0-2.201-2.13-3.736-4.116-2.903Z"
              fill="#7e9bfa"
            />
          </svg>
        </mock-styled.span>
        <mock-styled.p
          classname=""
        >
          Support
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          Please see our
           
          <a
            href="https://www.youtube.com/watch?v=N-4TeWsM7EU&feature=youtu.be"
            rel="noopener noreferrer"
            target="_blank"
          >
            usage instructions
          </a>
           
          for further information on how to use these details to connect a number of popular BI applications.
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          Please see below for more resources.
        </mock-styled.p>
        <mock-styled.button
          classname="el-mb5 el-intent-neutral"
        >
          <mock-styled.div />
          View Docs
        </mock-styled.button>
        <div>
          <mock-styled.button
            classname="el-mb5 el-intent-neutral"
          >
            <mock-styled.div />
            Video
          </mock-styled.button>
        </div>
        <mock-styled.button
          classname="el-mb5 el-intent-neutral"
        >
          <mock-styled.div />
          Help
        </mock-styled.button>
      </mock-styled.aside>
      <mock-styled.section
        classname=""
      >
        <mock-styled.h1
          classname=""
        >
          Sharing Data
        </mock-styled.h1>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          Our data warehouse solution can provide access to your data in a number of different formats. To get immediate access to your data in a particular format, click ‘Create Share’. The data will be published into your data warehouse and connectivity information will then be presented to you.
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          Please note that creating a data share is a long running process and can take 30 seconds or more to complete.
        </mock-styled.p>
        <mock-styled.h2
          classname=""
        >
          Available Data
        </mock-styled.h2>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div
            classname="el-mb11"
          >
            <mock-styled.div />
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.h2
          classname=""
        >
          Data Shares
        </mock-styled.h2>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div />
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
